Java 8, README.md